--- a/frappe/public/less/form.less
+++ b/frappe/public/less/form.less
@@ -866,14 +866,14 @@ select.form-control {
 			color: #8D99A6;
 		}
 		.stats-value {
-			font-size: 25px;
+			font-size: 20px;
 			font-weight: 300;
 		}
 		.stats-description {
 			font-size: 12px;
 			color: #8D99A6;
 		}
-		.total, .completed {
+		.graph-data .stats-value {
 			color: #98d85b;
 		}
 	}
@@ -912,7 +912,7 @@ select.form-control {
 	}
 }
 
-line.average {
+line.dashed {
 	stroke-dasharray: 5,3;
 }
 
@@ -921,7 +921,7 @@ line.average {
 		display: block;
 	}
 
-	.average-text {
+	.specific-value {
 		text-anchor: start;
 	}
 
