--- a/frappe/public/css/desk.css
+++ b/frappe/public/css/desk.css
@@ -508,6 +508,17 @@ fieldset[disabled] .form-control {
   cursor: pointer;
   margin-right: 10px;
 }
+a.progress-small .progress-chart {
+  width: 60px;
+  margin-top: 4px;
+  float: right;
+}
+a.progress-small .progress {
+  margin-bottom: 0;
+}
+a.progress-small .progress-bar {
+  background-color: #98d85b;
+}
 /* on small screens, show only icons on top */
 @media (max-width: 767px) {
   .module-view-layout .nav-stacked > li {
