--- a/frappe/desk/page/setup_wizard/setup_wizard.css
+++ b/frappe/desk/page/setup_wizard/setup_wizard.css
@@ -1,5 +1,9 @@
+#page-setup-wizard {
+    margin-top: 30px;
+}
+
 .setup-wizard-brand {
-	margin: 40px;
+	margin: 30px;
 	text-align: center;
 	display: flex;
 	justify-content: center;
@@ -33,10 +37,10 @@
 }
 
 .setup-wizard-slide .lead {
-	margin: 40px;
+	margin: 30px;
 	color: #777777;
 	text-align: center;
-	font-size: 30px;
+	font-size: 24px;
 }
 
 .setup-wizard-slide .col-sm-12 {
@@ -52,7 +56,6 @@
 }
 
 .setup-wizard-slide .form-control {
-	height: 35px;
 	font-weight: 500;
 }
 
@@ -69,7 +72,7 @@
 }
 
 .setup-wizard-slide.with-form {
-	margin: 40px auto;
+	margin: 30px auto;
 	padding: 10px 50px;
 	border: 1px solid #d1d8dd;
 	box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.1);
@@ -77,12 +80,6 @@
 
 .setup-wizard-slide .footer {
 	padding: 30px 0px;
-}
-
-.setup-wizard-slide a.next-btn,
-.setup-wizard-slide a.complete-btn {
-	font-size: 14px;
-	padding: 7px 25px;
 }
 
 .setup-wizard-slide a.next-btn.disabled,
@@ -117,7 +114,7 @@
 	width: 140px;
 	height: 180px; /*depends on presence of heading*/
 	text-align: center;
-	margin-left: 33%;
+	margin-left: calc((100% - 140px)/2);
 }
 
 .setup-wizard-slide .frappe-control[data-fieldtype="Attach Image"] .form-group,
