--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -923,7 +923,7 @@ input[type="checkbox"] {
 .color-picker {
 	position: relative;
 	z-index: 999;
-	.color-picker-pallet {
+	.color-picker-pallete {
 		border-radius: 4px;
 		box-shadow: 0 4px 12px rgba(0,0,0,.15);
 		background: #fff;
