--- a/frappe/public/css/desk.css
+++ b/frappe/public/css/desk.css
@@ -1004,8 +1004,10 @@ input[type="checkbox"]:checked:before {
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
   background: #fff;
   border: 1px solid #d1d8dd;
-  max-width: 305px;
-  padding: 5px;
+  width: 290px;
+  height: 106px;
+  padding-top: 10px;
+  padding-left: 5px;
   position: absolute;
   top: 0;
   left: 0;
@@ -1038,6 +1040,6 @@ input[type="checkbox"]:checked:before {
   display: inline-block;
   width: 20px;
   height: 20px;
-  margin: 0px 0 0 4px;
+  margin: -2px 0 0 3px;
   border: 1px solid rgba(0, 0, 0, 0.25);
 }
