--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -923,16 +923,20 @@ input[type="checkbox"] {
 .color-picker {
 	position: relative;
 	z-index: 999;
+
 	.color-picker-pallete {
 		border-radius: 4px;
 		box-shadow: 0 4px 12px rgba(0,0,0,.15);
 		background: #fff;
 		border: 1px solid @border-color;
-		max-width: 305px;
-		padding: 5px;
+		width: 290px;
+		height: 106px;
+		padding-top: 10px;
+		padding-left: 5px;
 		position: absolute;
 		top: 0;
 		left: 0;
+
 		&:after,
 		&:before {
 			border: solid transparent;
@@ -962,7 +966,7 @@ input[type="checkbox"] {
 		display: inline-block;
 		width: 20px;
 		height: 20px;
-		margin: 0px 0 0 4px;
+		margin: -2px 0 0 3px;
 		border: 1px solid rgba(0,0,0, 0.25);
 
 	}
