--- a/frappe/public/css/form.css
+++ b/frappe/public/css/form.css
@@ -684,17 +684,24 @@ select.form-control {
 .graph-container .stats-container .graph-data .stats-value {
   color: #98d85b;
 }
-.bar-graph .axis {
+.bar-graph .axis,
+.line-graph .axis {
   font-size: 10px;
   fill: #6a737d;
 }
-.bar-graph .axis line {
+.bar-graph .axis line,
+.line-graph .axis line {
   stroke: rgba(27, 31, 35, 0.1);
 }
-.bar-graph g.mini {
+.data-points circle {
+  fill: #28a745;
+  stroke: #fff;
+  stroke-width: 2;
+}
+.data-points g.mini {
   fill: #98d85b;
 }
-.path {
+.data-points path {
   fill: none;
   stroke: #28a745;
   stroke-opacity: 1;
