--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -918,3 +918,56 @@ input[type="checkbox"] {
 		 visibility: visible;
 	}
 }
+
+// color picker
+.color-picker {
+	position: relative;
+	z-index: 999;
+
+	.color-picker-pallete {
+		border-radius: 4px;
+		box-shadow: 0 4px 12px rgba(0,0,0,.15);
+		background: #fff;
+		border: 1px solid @border-color;
+		width: 290px;
+		height: 106px;
+		padding-top: 10px;
+		padding-left: 5px;
+		position: absolute;
+		top: 0;
+		left: 0;
+
+		&:after,
+		&:before {
+			border: solid transparent;
+			content: " ";
+			height: 0;
+			width: 0;
+			pointer-events: none;
+			position: absolute;
+			bottom: 100%;
+			left: 30px;
+		}
+		&:after {
+			border-color: rgba(255, 255, 255, 0);
+			border-bottom-color: #fff;
+			border-width: 8px;
+			margin-left: -8px;
+		}
+		&:before {
+			border-color: rgba(221, 221, 221, 0);
+			border-bottom-color: @border-color;
+			border-width: 9px;
+			margin-left: -9px;
+		}
+	}
+	.color-box {
+		cursor: pointer;
+		display: inline-block;
+		width: 20px;
+		height: 20px;
+		margin: -2px 0 0 3px;
+		border: 1px solid rgba(0,0,0, 0.25);
+
+	}
+}
