--- a/frappe/public/css/page.css
+++ b/frappe/public/css/page.css
@@ -146,6 +146,9 @@ select.input-sm {
     right: 101px;
     width: 100%;
   }
+  .page-title h1 {
+    padding-right: 170px;
+  }
   .page-head .page-title h1 {
     font-size: 18px;
   }
