--- a/frappe/public/less/page.less
+++ b/frappe/public/less/page.less
@@ -178,6 +178,9 @@ select.input-sm {
 		left: 0;
 		right: 101px;
 		width: 100%;
+		h1 {
+			padding-right: 170px;
+		}
 	}
 
 	.page-head .page-title h1 {
