--- a/frappe/public/css/mobile.css
+++ b/frappe/public/css/mobile.css
@@ -332,3 +332,9 @@ body {
     right: 90px;
   }
 }
+@media (max-width: 580px) {
+  .timeline-item.user-content .comment-header .btn-add-to-kb {
+    float: none !important;
+    margin-top: 5px !important;
+  }
+}
