--- a/frappe/public/css/mobile.css
+++ b/frappe/public/css/mobile.css
@@ -192,6 +192,15 @@ body {
   }
 }
 @media (max-width: 767px) {
+  body[data-route^="Form"] .page-title .title-text {
+    font-size: 16px;
+    width: calc(100% - 30px);
+  }
+  body[data-route^="Form"] .page-title .indicator {
+    float: left;
+    margin-top: 10px;
+    margin-right: 5px;
+  }
   .modal .modal-dialog {
     margin: 0px;
     padding: 0px;
@@ -321,5 +330,11 @@ body {
   }
   body[data-route^="Form"] .page-head .sub-heading {
     right: 90px;
+  }
+}
+@media (max-width: 580px) {
+  .timeline-item.user-content .comment-header .btn-add-to-kb {
+    float: none !important;
+    margin-top: 5px !important;
   }
 }
