Left align Indicator and corrected “Add to Knowledge Base” button misalignment.

--- a/frappe/public/css/mobile.css
+++ b/frappe/public/css/mobile.css
@@ -392,3 +392,9 @@ body {
     /*Height of avtar image -36px to align text center vertically*/
   }
 }
+@media (max-width: 580px) {
+  .timeline-item.user-content .comment-header .btn-add-to-kb {
+    float: none !important;
+    margin-top: 5px !important;
+  }
+}
