DRY font-family declarations

--- a/frappe/public/less/common.less
+++ b/frappe/public/less/common.less
@@ -1,21 +1,8 @@
 @import "variables.less";
 @import "mixins.less";
 
-// @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
-//
-// body {
-//   font-family: "Open Sans", "Helvetica", Arial, "sans-serif";
-// }
-
-html {
-	// overflow-x: hidden;
-}
-
 body {
-	font-family: -apple-system, BlinkMacSystemFont,
-	    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
-	    "Fira Sans", "Droid Sans", "Helvetica Neue",
-	    sans-serif;
+	font-family: @font-stack;
 }
 
 a {
