--- a/frappe/public/less/docs.less
+++ b/frappe/public/less/docs.less
@@ -8,10 +8,7 @@ body {
  // position: relative;
 	 -webkit-font-smoothing: antialiased;
 
- 	font-family: -apple-system, BlinkMacSystemFont,
- 	    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
- 	    "Fira Sans", "Droid Sans", "Helvetica Neue",
- 	    sans-serif;
+ 	font-family: @font-stack;
 
 }
 
