--- a/frappe/public/less/variables.less
+++ b/frappe/public/less/variables.less
@@ -49,6 +49,10 @@
 @screen-sm:				991px;
 @screen-md:				1199px;
 
+@font-stack:	-apple-system, BlinkMacSystemFont,
+	"Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
+	"Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+
 //	palette	colors
 @red:						#FC4F51;
 @red-light:					#FD8B8B;
