--- a/frappe/public/less/website.less
+++ b/frappe/public/less/website.less
@@ -3,17 +3,9 @@
 @import "avatar.less";
 @import "indicator.less";
 
-// html, body {
-// 	font-family: "Open Sans", "Helvetica Neue", Serif;
-// 	color: @text-light;
-// }
-
 body {
-	font-family: -apple-system, BlinkMacSystemFont,
-	    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
-	    "Fira Sans", "Droid Sans", "Helvetica Neue",
-	    sans-serif;
-		color: @text-color;
+	font-family: @font-stack;
+	color: @text-color;
 }
 
 a& {
