min-width 100% for mobile email clients

--- a/frappe/public/css/email.css
+++ b/frappe/public/css/email.css
@@ -14,6 +14,7 @@ p {
 .email-body,
 .email-footer {
   width: 100% !important;
+  min-width: 100% !important;
 }
 .email-body tr {
   font-size: 14px;
