--- a/frappe/templates/emails/standard.html
+++ b/frappe/templates/emails/standard.html
@@ -11,7 +11,8 @@
 	<table class="body-table {% if header %}has-header{% endif %}" border="0" cellpadding="0" cellspacing="0" height="100%" width="100%">
 		<tr>
 			<td align="center" valign="top">
-				<table class="email-container" border="0" cellpadding="0" cellspacing="0" width="600">
+				<table class="email-container" border="0" cellpadding="0" cellspacing="0"
+					width="{% if header %}600{% else %}100%{% endif %}">
 					<tr>
 						<td valign="top">
 							{{ header or "" }}
