--- a/frappe/public/less/email.less
+++ b/frappe/public/less/email.less
@@ -9,6 +9,10 @@ p {
 	margin: 1em 0 !important;
 }
 
+hr {
+	border-top: 1px solid @border-color;
+}
+
 .body-table, .email-body tr, .email-footer tr {
 	font-family: @font-stack;
 }
