--- a/frappe/public/less/email.less
+++ b/frappe/public/less/email.less
@@ -78,3 +78,9 @@ hr {
 	}
 }
 
+.more-info {
+	font-size: 80%;
+	color: @text-muted;
+	border-top: 1px solid @light-border-color;
+	padding-top: 10px;
+}
