--- a/frappe/public/less/list.less
+++ b/frappe/public/less/list.less
@@ -550,6 +550,7 @@
 	&--activity {
 		justify-content: flex-end;
 		margin-right: 5px;
+		min-width: 110px;
 
 		.list-row-modified, .avatar-small {
 			margin-right: 10px;
