--- a/frappe/public/css/form.css
+++ b/frappe/public/css/form.css
@@ -287,12 +287,18 @@ h6.uppercase,
   border-radius: 3px;
   margin-left: -7px;
   position: relative;
+  max-width: calc(100% - 50px);
+  padding-right: 0px;
   overflow: visible;
 }
 .timeline-item.user-content .avatar-medium {
   margin-right: 10px;
   height: 45px;
   width: 45px;
+}
+.timeline-item.user-content .action-btns {
+  position: absolute;
+  right: 0;
 }
 .timeline-item.user-content .comment-header {
   background-color: #fafbfc;
@@ -301,12 +307,16 @@ h6.uppercase,
   color: #8D99A6;
   border-bottom: 1px solid #EBEFF2;
 }
+.timeline-item.user-content .comment-header.links-active {
+  padding-right: 60px;
+}
 .timeline-item.user-content .comment-header .octicon-heart {
   color: #ff5858;
   cursor: pointer;
 }
 .timeline-item.user-content .reply {
   padding: 15px;
+  overflow: auto;
 }
 .timeline-item.user-content .reply > div > p:first-child {
   margin-top: 0px;
