--- a/frappe/public/less/mobile.less
+++ b/frappe/public/less/mobile.less
@@ -406,4 +406,58 @@ body {
 			right: 90px;
 		}
 	}
+	.timeline {
+		&::before {
+			content: none;
+		}
+		.timeline-new-email {
+			margin: 20px 15px;
+			padding-left: 15px;
+			&::before {
+				content: none;
+			}
+		}
+		.timeline-item {
+			&.user-content {
+				margin: 20px 15px;
+				.media-body {
+					margin-left: 0;
+					max-width: 100%;
+					overflow: hidden;
+					&:before {
+						content: none;
+					}
+				}
+				.comment-header{
+					padding: 7px 10px;
+					.links-active {
+						padding-right: 10px;
+					}
+				}
+				.avatar-medium {
+				    margin-right: 10px;
+				}
+				.reply {
+					padding: 10px;
+				}
+			}
+			&.notification-content {
+				padding-left: 15px;
+				margin: 20px 0;
+				&::before {
+					content: none;
+				}
+				.small {
+				    padding-left: 0;
+				}
+			}
+			.delivery-status-indicator {
+				float: left;
+				margin: 0 5px 0 0;
+			}
+		}
+		.asset-details {
+			line-height: 24px; /*Height of avtar image -36px to align text center vertically*/
+		}
+	}
 }
