--- a/frappe/public/less/form.less
+++ b/frappe/public/less/form.less
@@ -827,6 +827,123 @@ select.form-control {
 	}
 }
 
+/* goals */
+
+.goals-page-container {
+	background-color: #fafbfc;
+	padding-top: 1px;
+
+	.goal-container {
+		background-color: #fff;
+		box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+		border-radius: 2px;
+		padding: 10px;
+		margin: 10px;
+	}
+}
+
+.graph-container {
+	.graphics {
+		margin-top: 10px;
+		padding: 10px 0px;
+	}
+
+	.stats-group {
+		display: flex;
+		justify-content: space-around;
+		flex: 1;
+	}
+
+	.stats-container {
+		display: flex;
+		justify-content: space-around;
+
+		.stats {
+			padding-bottom: 15px;
+		}
+
+		.stats-title {
+			color: #8D99A6;
+		}
+		.stats-value {
+			font-size: 20px;
+			font-weight: 300;
+		}
+		.stats-description {
+			font-size: 12px;
+			color: #8D99A6;
+		}
+		.graph-data .stats-value {
+			color: #98d85b;
+		}
+	}
+}
+
+.bar-graph, .line-graph {
+
+	.axis {
+		font-size: 10px;
+		fill: #6a737d;
+
+		line {
+			stroke: rgba(27,31,35,0.1);
+		}
+	}
+}
+
+.data-points {
+	circle {
+		fill: #28a745;
+		stroke: #fff;
+		stroke-width: 2;
+	}
+
+	g.mini {
+		fill: #98d85b;
+	}
+
+	path {
+		fill: none;
+		stroke: #28a745;
+		stroke-opacity: 1;
+		stroke-width: 2px;
+	}
+}
+
+.line-graph {
+	.path {
+		fill: none;
+		stroke: #28a745;
+		stroke-opacity: 1;
+		stroke-width: 2px;
+	}
+}
+
+line.dashed {
+	stroke-dasharray: 5,3;
+}
+
+.tick {
+	&.x-axis-label {
+		display: block;
+	}
+
+	.specific-value {
+		text-anchor: start;
+	}
+
+	.y-value-text {
+		text-anchor: end;
+	}
+
+	.x-value-text {
+		text-anchor: middle;
+	}
+}
+
+
 body[data-route^="Form/Communication"] textarea[data-fieldname="subject"] {
 	height: 80px !important;
 }
+
+
