Review changes and added minified date

--- a/frappe/public/less/mobile.less
+++ b/frappe/public/less/mobile.less
@@ -223,6 +223,9 @@ body {
 }
 
 @media(max-width: 767px) {
+	.toggle-sidebar {
+		margin-right: 0;
+	}
 	body[data-route^="Form"]{
 		.page-title {
 			.title-text {
@@ -411,7 +414,7 @@ body {
 			content: none;
 		}
 		.timeline-new-email {
-			margin: 20px 15px;
+			margin: 20px 0;
 			padding-left: 15px;
 			&::before {
 				content: none;
