--- a/frappe/public/css/mobile.css
+++ b/frappe/public/css/mobile.css
@@ -192,6 +192,9 @@ body {
   }
 }
 @media (max-width: 767px) {
+  .toggle-sidebar {
+    margin-right: 0;
+  }
   body[data-route^="Form"] .page-title .title-text {
     font-size: 16px;
     width: calc(100% - 30px);
@@ -335,7 +338,7 @@ body {
     content: none;
   }
   .timeline .timeline-new-email {
-    margin: 20px 15px;
+    margin: 20px 0;
     padding-left: 15px;
   }
   .timeline .timeline-new-email::before {
