--- a/frappe/public/less/list.less
+++ b/frappe/public/less/list.less
@@ -292,6 +292,7 @@
 		padding: 2px 4px;
 		font-weight: normal;
 		background-color: @btn-bg;
+		white-space: normal;
 
 		&:hover {
 			padding: 2px 15px 2px 4px;
