--- a/frappe/public/css/email.css
+++ b/frappe/public/css/email.css
@@ -6,9 +6,10 @@ body {
 p {
   margin: 1em 0 !important;
 }
-.body-table,
-.email-body tr,
-.email-footer tr {
+hr {
+  border-top: 1px solid #d1d8dd;
+}
+.body-table {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 }
 .email-header,
@@ -60,5 +61,34 @@ p {
   color: #fff;
   background-color: #5E64FF;
   border-color: #444bff;
+}
+.table {
+  width: 100%;
+  border-collapse: collapse;
+}
+.table td,
+.table th {
+  padding: 8px;
+  line-height: 1.42857143;
+  vertical-align: top;
+  border-top: 1px solid #d1d8dd;
+  text-align: left;
+}
+.table th {
+  font-weight: bold;
+}
+.table > thead > tr > th {
+  vertical-align: bottom;
+  border-bottom: 2px solid #d1d8dd;
+}
+.table > thead:first-child > tr:first-child > th {
+  border-top: none;
+}
+.table.table-bordered {
+  border: 1px solid #d1d8dd;
+}
+.table.table-bordered td,
+.table.table-bordered th {
+  border: 1px solid #d1d8dd;
 }
 /* csslint ignore:end */
