--- a/frappe/public/less/email.less
+++ b/frappe/public/less/email.less
@@ -10,7 +10,11 @@ p {
 	margin: 1em 0 !important;
 }
 
-.body-table, .email-body tr, .email-footer tr {
+hr {
+	border-top: 1px solid @border-color;
+}
+
+.body-table {
 	font-family: @font-stack;
 }
 
@@ -72,6 +76,40 @@ p {
 		color: #fff;
 		background-color: @brand-primary;
 		border-color: #444bff;
+	}
+}
+
+.table {
+	width: 100%;
+	border-collapse: collapse;
+
+	td, th {
+		padding: 8px;
+		line-height: 1.42857143;
+		vertical-align: top;
+		border-top: 1px solid @border-color;
+		text-align: left;
+	}
+
+	th {
+		font-weight: bold;
+	}
+
+	& > thead > tr > th {
+		vertical-align: bottom;
+		border-bottom: 2px solid @border-color;
+	}
+
+	& > thead:first-child > tr:first-child > th {
+		border-top: none;
+	}
+
+	&.table-bordered {
+		border: 1px solid @border-color;
+
+		td, th {
+			border: 1px solid @border-color;
+		}
 	}
 }
 
