--- a/frappe/templates/emails/auto_email_report.html
+++ b/frappe/templates/emails/auto_email_report.html
@@ -1,7 +1,7 @@
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
 	<tr>
-		<h3>{{ title }}</h3>
-		<p>{{ date_time }}</p>
+		<td><h3>{{ title }}</h3></td>
+		<td><p>{{ date_time }}</p></td>
 	</tr>
 </table>
 <table class="table table-bordered" cellpadding="0" cellspacing="0" border="0" width="100%">
