--- a/frappe/public/less/email.less
+++ b/frappe/public/less/email.less
@@ -23,16 +23,13 @@ hr {
 	min-width: 100% !important;
 }
 
-.email-body tr {
+.email-body {
 	font-size: @text-regular;
 }
 
 .email-footer {
 	border-top: 1px solid @border-color;
-
-	tr {
-		font-size: @text-medium;
-	}
+	font-size: @text-medium;
 }
 
 .email-header {
@@ -111,6 +108,13 @@ hr {
 			border: 1px solid @border-color;
 		}
 	}
+}
+
+.more-info {
+	font-size: 80% !important;
+	color: @text-muted !important;
+	border-top: 1px solid @light-border-color;
+	padding-top: 10px;
 }
 
 /* csslint ignore:end */
