--- a/frappe/public/css/email.css
+++ b/frappe/public/css/email.css
@@ -1,4 +1,4 @@
-/* csslint ignore: start */
+/* csslint ignore:start */
 body {
   line-height: 1.5;
   color: #36414C;
@@ -61,3 +61,4 @@ p {
   background-color: #5E64FF;
   border-color: #444bff;
 }
+/* csslint ignore:end */
