--- a/frappe/public/less/email.less
+++ b/frappe/public/less/email.less
@@ -1,4 +1,4 @@
-/* csslint ignore: start */
+/* csslint ignore:start */
 @import "variables.less";
 
 body {
@@ -75,3 +75,4 @@ p {
 	}
 }
 
+/* csslint ignore:end */
