--- a/frappe/templates/emails/email_header.html
+++ b/frappe/templates/emails/email_header.html
@@ -1,10 +1,12 @@
-<table border="0" cellpadding="0" cellspacing="0" width="100%" id="email_header">
+<table class="email-header" border="0" cellpadding="0" cellspacing="0" width="100%">
 	<tr>
-		<td width="35" height="50" style="border-bottom: 1px solid #d1d8dd;">
-			<img embed="{{brand_image}}" width="24" height="24" style="display: block;" alt="{{brand_text}}">
+		<td width="15"></td>
+		<td width="35" height="50">
+			<img class="brand-image" embed="{{brand_image}}" alt="{{brand_text}}">
 		</td>
-		<td style="border-bottom: 1px solid #d1d8dd;">
+		<td>
 			<p>{{ brand_text }}</p>
 		</td>
+		<td width="15"></td>
 	</tr>
 </table>
