--- a/frappe/templates/emails/standard.html
+++ b/frappe/templates/emails/standard.html
@@ -7,11 +7,12 @@
 	<title>{{ subject or "" }}</title>
 </head>
 
-<body style="line-height: 1.5; color: #36414C;">
-	<table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="body_table" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px;">
+<body>
+	<table class="body-table {% if header %}has-header{% endif %}" border="0" cellpadding="0" cellspacing="0" height="100%" width="100%">
 		<tr>
 			<td align="center" valign="top">
-				<table border="0" cellpadding="0" cellspacing="0" width="600" id="email_container">
+				<table class="email-container" border="0" cellpadding="0" cellspacing="0"
+					width="{% if header %}600{% else %}100%{% endif %}">
 					<tr>
 						<td valign="top">
 							{{ header or "" }}
@@ -19,22 +20,23 @@
 					</tr>
 					<tr>
 						<td valign="top">
-							<table border="0" cellpadding="0" cellspacing="0" width="100%" id="email_body">
+							<table class="email-body" border="0" cellpadding="0" cellspacing="0" width="100%">
 								<tr>
+									<td width="15"></td>
 									<td valign="top">
 										<p>{{ content }}</p>
 										<p>{{ signature }}</p>
 									</td>
+									<td width="15"></td>
 								</tr>
 							</table>
 						</td>
 					</tr>
 					<tr>
 						<td valign="top">
-							<table border="0" cellpadding="0" cellspacing="0" width="100%" id="email_footer">
+							<table class="email-footer" border="0" cellpadding="0" cellspacing="0" width="100%">
 								<tr>
-									<td valign="top" style="font-family: Helvetica, Arial, sans-serif; font-size: 11px;
-    margin-bottom: 15px; border-top: 1px solid #d1d8dd;" data-email-footer="true">
+									<td valign="top" data-email-footer="true">
 										{{ footer }}
 									</td>
 								</tr>
