--- a/frappe/public/less/email.less
+++ b/frappe/public/less/email.less
@@ -117,4 +117,24 @@ hr {
 	padding-top: 10px;
 }
 
+.text-right {
+	text-align: right !important;
+}
+
+.text-center {
+	text-align: center !important;
+}
+
+.text-muted {
+	color: @text-muted !important;
+}
+
+.text-extra-muted {
+	color: @text-extra-muted !important;
+}
+
+/* auto email report */
+.report-title {
+	margin-bottom: 20px;
+}
 /* csslint ignore:end */
