--- a/frappe/public/less/email.less
+++ b/frappe/public/less/email.less
@@ -133,6 +133,18 @@ hr {
 	color: @text-extra-muted !important;
 }
 
+.text-regular {
+	font-size: @text-regular;
+}
+
+.text-medium {
+	font-size: @text-medium;
+}
+
+.text-small {
+	font-size: @text-small;
+}
+
 /* auto email report */
 .report-title {
 	margin-bottom: 20px;
