--- a/frappe/templates/emails/auto_email_report.html
+++ b/frappe/templates/emails/auto_email_report.html
@@ -1,5 +1,5 @@
 {% macro get_alignment(col) %}
-{%- if col.fieldtype in ('Int', 'Float', 'Currency', 'Check') %} text-right {% endif -%}
+{%- if col.fieldtype in ('Int', 'Float', 'Currency', 'Check') %} class="text-right" {% endif -%}
 {% endmacro %}
 
 <table class="report-title" border="0" cellpadding="0" cellspacing="0" width="100%">
@@ -19,7 +19,7 @@
 	<thead>
 		<tr>
 			{% for col in columns %}
-			<th class="{{- get_alignment(col) }}">
+			<th {{- get_alignment(col) }}>
 				{{- col.label -}}
 			</th>
 			{% endfor %}
@@ -29,7 +29,7 @@
 		{% for row in data %}
 		<tr>
 			{% for col in columns %}
-			<td class="{{- get_alignment(col) }}">
+			<td {{- get_alignment(col) }}>
 				{{- frappe.format(row[col.fieldname], col, row) -}}
 			</td>
 			{% endfor %}
