--- a/frappe/public/less/email.less
+++ b/frappe/public/less/email.less
@@ -16,6 +16,10 @@ hr {
 
 .body-table {
 	font-family: @font-stack;
+
+	td {
+		font-family: @font-stack;
+	}
 }
 
 .email-header, .email-body, .email-footer {
@@ -93,7 +97,7 @@ hr {
 	}
 
 	& > thead > tr > th {
-		vertical-align: bottom;
+		vertical-align: middle;
 		border-bottom: 2px solid @border-color;
 	}
 
