--- a/frappe/desk/page/setup_wizard/setup_wizard.css
+++ b/frappe/desk/page/setup_wizard/setup_wizard.css
@@ -59,14 +59,6 @@
 	font-weight: 500;
 }
 
-.setup-wizard-slide .has-error .control-label {
-	color: #ffa00a;
-}
-
-.setup-wizard-slide .has-error .form-control{
-	border-color: #ffa00a;
-}
-
 .setup-wizard-slide .form-control.bold {
 	background-color: #fff;
 }
@@ -113,8 +105,13 @@
 .setup-wizard-slide .frappe-control[data-fieldtype="Attach Image"] {
 	width: 140px;
 	height: 180px; /*depends on presence of heading*/
+	margin-top: 20px;
 	text-align: center;
-	margin-left: calc((100% - 140px)/2);
+}
+
+/*image control should be centred on profile slide*/
+.slide-wrapper[data-slide-id="2"] .frappe-control[data-fieldtype="Attach Image"] {
+	margin-left: 33%;
 }
 
 .setup-wizard-slide .frappe-control[data-fieldtype="Attach Image"] .form-group,
