--- a/frappe/public/css/email.css
+++ b/frappe/public/css/email.css
@@ -12,6 +12,9 @@ hr {
 .body-table {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 }
+.body-table td {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+}
 .email-header,
 .email-body,
 .email-footer {
@@ -26,18 +29,20 @@ hr {
   font-size: 12px;
 }
 .email-header {
-  background: #fafbfc;
   border: 1px solid #d1d8dd;
-  border-radius: 3px 3px 0 0;
+  border-radius: 4px 4px 0 0;
 }
 .email-header .brand-image {
   width: 24px;
   height: 24px;
   display: block;
 }
+.email-header-title {
+  font-weight: bold;
+}
 .body-table.has-header .email-body {
   border: 1px solid #d1d8dd;
-  border-radius: 0 0 3px 3px;
+  border-radius: 0 0 4px 4px;
   border-top: none;
 }
 .body-table.has-header .email-footer {
@@ -76,7 +81,7 @@ hr {
   font-weight: bold;
 }
 .table > thead > tr > th {
-  vertical-align: bottom;
+  vertical-align: middle;
   border-bottom: 2px solid #d1d8dd;
 }
 .table > thead:first-child > tr:first-child > th {
@@ -115,6 +120,29 @@ hr {
 }
 .text-small {
   font-size: 10px;
+}
+.indicator {
+  width: 8px;
+  height: 8px;
+  border-radius: 8px;
+  background-color: #b8c2cc;
+  display: inline-block;
+  margin-right: 5px;
+}
+.indicator.indicator-blue {
+  background-color: #5e64ff;
+}
+.indicator.indicator-green {
+  background-color: #98d85b;
+}
+.indicator.indicator-orange {
+  background-color: #ffa00a;
+}
+.indicator.indicator-red {
+  background-color: #ff5858;
+}
+.indicator.indicator-yellow {
+  background-color: #FEEF72;
 }
 /* auto email report */
 .report-title {
