--- a/frappe/public/css/form.css
+++ b/frappe/public/css/form.css
@@ -718,22 +718,11 @@ select.form-control {
   stroke: rgba(27, 31, 35, 0.1);
 }
 .data-points circle {
-  fill: #28a745;
   stroke: #fff;
   stroke-width: 2;
 }
-.data-points g.mini {
-  fill: #98d85b;
-}
 .data-points path {
   fill: none;
-  stroke: #28a745;
-  stroke-opacity: 1;
-  stroke-width: 2px;
-}
-.line-graph .path {
-  fill: none;
-  stroke: #28a745;
   stroke-opacity: 1;
   stroke-width: 2px;
 }
@@ -751,6 +740,78 @@ line.dashed {
 }
 .tick .x-value-text {
   text-anchor: middle;
+}
+.stroke.grey {
+  stroke: #F0F4F7;
+}
+.stroke.blue {
+  stroke: #5e64ff;
+}
+.stroke.red {
+  stroke: #ff5858;
+}
+.stroke.light-green {
+  stroke: #98d85b;
+}
+.stroke.green {
+  stroke: #28a745;
+}
+.stroke.orange {
+  stroke: #ffa00a;
+}
+.stroke.purple {
+  stroke: #743ee2;
+}
+.stroke.darkgrey {
+  stroke: #b8c2cc;
+}
+.stroke.black {
+  stroke: #36414C;
+}
+.stroke.yellow {
+  stroke: #FEEF72;
+}
+.stroke.light-blue {
+  stroke: #7CD6FD;
+}
+.stroke.lightblue {
+  stroke: #7CD6FD;
+}
+.fill.grey {
+  fill: #F0F4F7;
+}
+.fill.blue {
+  fill: #5e64ff;
+}
+.fill.red {
+  fill: #ff5858;
+}
+.fill.light-green {
+  fill: #98d85b;
+}
+.fill.green {
+  fill: #28a745;
+}
+.fill.orange {
+  fill: #ffa00a;
+}
+.fill.purple {
+  fill: #743ee2;
+}
+.fill.darkgrey {
+  fill: #b8c2cc;
+}
+.fill.black {
+  fill: #36414C;
+}
+.fill.yellow {
+  fill: #FEEF72;
+}
+.fill.light-blue {
+  fill: #7CD6FD;
+}
+.fill.lightblue {
+  fill: #7CD6FD;
 }
 body[data-route^="Form/Communication"] textarea[data-fieldname="subject"] {
   height: 80px !important;
