--- a/frappe/public/less/form.less
+++ b/frappe/public/less/form.less
@@ -890,6 +890,7 @@ select.form-control {
 			padding-bottom: 15px;
 		}
 
+		// Custom (impactified) stats style
 		.stats-title {
 			color: #8D99A6;
 		}
@@ -909,6 +910,7 @@ select.form-control {
 
 .bar-graph, .line-graph {
 
+	// baselines
 	.axis {
 		font-size: 10px;
 		fill: #6a737d;
@@ -921,27 +923,18 @@ select.form-control {
 
 .data-points {
 	circle {
-		fill: #28a745;
+		// fill: #28a745;
 		stroke: #fff;
 		stroke-width: 2;
 	}
 
 	g.mini {
-		fill: #98d85b;
+		// fill: #98d85b;
 	}
 
 	path {
 		fill: none;
-		stroke: #28a745;
-		stroke-opacity: 1;
-		stroke-width: 2px;
-	}
-}
-
-.line-graph {
-	.path {
-		fill: none;
-		stroke: #28a745;
+		// stroke: #28a745;
 		stroke-opacity: 1;
 		stroke-width: 2px;
 	}
@@ -967,6 +960,80 @@ line.dashed {
 	.x-value-text {
 		text-anchor: middle;
 	}
+}
+
+.stroke.grey {
+  stroke: #F0F4F7;
+}
+.stroke.blue {
+  stroke: #5e64ff;
+}
+.stroke.red {
+  stroke: #ff5858;
+}
+.stroke.light-green {
+  stroke: #98d85b;
+}
+.stroke.green {
+  stroke: #28a745;
+}
+.stroke.orange {
+  stroke: #ffa00a;
+}
+.stroke.purple {
+  stroke: #743ee2;
+}
+.stroke.darkgrey {
+  stroke: #b8c2cc;
+}
+.stroke.black {
+  stroke: #36414C;
+}
+.stroke.yellow {
+  stroke: #FEEF72;
+}
+.stroke.light-blue {
+  stroke: #7CD6FD;
+}
+.stroke.lightblue {
+  stroke: #7CD6FD;
+}
+
+.fill.grey {
+  fill: #F0F4F7;
+}
+.fill.blue {
+  fill: #5e64ff;
+}
+.fill.red {
+  fill: #ff5858;
+}
+.fill.light-green {
+  fill: #98d85b;
+}
+.fill.green {
+  fill: #28a745;
+}
+.fill.orange {
+  fill: #ffa00a;
+}
+.fill.purple {
+  fill: #743ee2;
+}
+.fill.darkgrey {
+  fill: #b8c2cc;
+}
+.fill.black {
+  fill: #36414C;
+}
+.fill.yellow {
+  fill: #FEEF72;
+}
+.fill.light-blue {
+  fill: #7CD6FD;
+}
+.fill.lightblue {
+  fill: #7CD6FD;
 }
 
 
