--- a/frappe/public/less/form.less
+++ b/frappe/public/less/form.less
@@ -886,6 +886,7 @@ select.form-control {
 	.stats-container {
 		display: flex;
 		justify-content: space-around;
+		padding-top: 10px;
 
 		.stats {
 			padding-bottom: 15px;
@@ -920,6 +921,10 @@ select.form-control {
 			stroke: rgba(27,31,35,0.1);
 		}
 	}
+}
+
+.percentage-graph {
+	margin-top: 30px;
 }
 
 .data-points {
@@ -1026,7 +1031,9 @@ ul.data-point-list li {
 	flex: 1;
 }
 
-
+.focus-margin {
+	margin: 10px 5%;
+}
 
 .stroke.grey {
   stroke: #F0F4F7;
@@ -1100,6 +1107,43 @@ ul.data-point-list li {
 }
 .fill.lightblue {
   fill: #7CD6FD;
+}
+
+.background.grey {
+  background: #F0F4F7;
+}
+.background.blue {
+  background: #5e64ff;
+}
+.background.red {
+  background: #ff5858;
+}
+.background.light-green {
+  background: #98d85b;
+}
+.background.green {
+  background: #28a745;
+}
+.background.orange {
+  background: #ffa00a;
+}
+.background.purple {
+  background: #743ee2;
+}
+.background.darkgrey {
+  background: #b8c2cc;
+}
+.background.black {
+  background: #36414C;
+}
+.background.yellow {
+  background: #FEEF72;
+}
+.background.light-blue {
+  background: #7CD6FD;
+}
+.background.lightblue {
+  background: #7CD6FD;
 }
 
 .border-top.grey {
