--- a/frappe/public/less/mobile.less
+++ b/frappe/public/less/mobile.less
@@ -445,6 +445,9 @@ body {
 				}
 				.reply {
 					padding: 10px;
+				}	
+				.commented-on-small{
+					display: inline-block;
 				}
 				.commented-on-small{
 					display: inline-block;
