--- a/frappe/public/css/mobile.css
+++ b/frappe/public/css/mobile.css
@@ -367,6 +367,9 @@ body {
   .timeline .timeline-item.user-content .reply {
     padding: 10px;
   }
+  .timeline .timeline-item.user-content .commented-on-small {
+    display: inline-block;
+  }
   .timeline .timeline-item.notification-content {
     padding-left: 15px;
     margin: 20px 0;
