--- a/frappe/public/less/mobile.less
+++ b/frappe/public/less/mobile.less
@@ -442,6 +442,9 @@ body {
 				}
 				.reply {
 					padding: 10px;
+				}	
+				.commented-on-small{
+					display: inline-block;
 				}
 			}
 			&.notification-content {
