--- a/frappe/public/less/form.less
+++ b/frappe/public/less/form.less
@@ -391,7 +391,7 @@ h6.uppercase, .h6.uppercase {
 	.action-btns {
 	    position: absolute;
 	    right: 0;
-	    padding: 5px 10px 2px 5px;
+	    padding: 5px 15px 2px 5px;
 	}
 
 	.comment-header {
@@ -434,11 +434,12 @@ h6.uppercase, .h6.uppercase {
 		.close {
 			color: inherit;
 			opacity: 1;
+			padding: 0 0 0 10px;
 		}
 	}
 
 	.edit-btn-container {
-		padding: 0 10px 0 0;
+		padding: 0;
 
 		.edit {
 			color: inherit;
