--- a/frappe/public/less/mobile.less
+++ b/frappe/public/less/mobile.less
@@ -431,6 +431,9 @@ body {
 						content: none;
 					}
 				}
+				.action-btns {
+					padding: 5px 10px 2px 5px;
+				}
 				.comment-header{
 					padding: 7px 10px;
 					.links-active {
