--- a/frappe/public/less/form.less
+++ b/frappe/public/less/form.less
@@ -650,6 +650,16 @@ h6.uppercase, .h6.uppercase {
 	}
 }
 
+.flex-justify-center {
+	display: flex;
+    justify-content: center;
+}
+
+.flex-justify-end {
+	display: flex;
+    justify-content: flex-end;
+}
+
 .hide-control {
 	display: none !important;
 }
