--- a/frappe/templates/emails/upcoming_events.html
+++ b/frappe/templates/emails/upcoming_events.html
@@ -1,7 +1,8 @@
-<h3>{{ _("Events in Today's Calendar") }}</h3>
 {% for e in events %}
-<h4>{{ e.starts_on }}: {{ e.subject }}</h4>
-<p>{{ e.description or '' }}</p>
+<p>
+	<span class="text-bold">{{ e.starts_on }}: </span><span>{{ e.subject }}</span>
+	<div>{{ e.description or '' }}</div>
+</p>
 {% endfor %}
 <p class="more-info">
 	{{ _("Daily Event Digest is sent for Calendar Events where reminders are set.") }}
