--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -591,6 +591,24 @@ a.progress-small {
 	}
 }
 
+.note-hint-popover {
+	border-radius: 3px;
+	border-color: @border-color;
+	padding: 0;
+
+	.popover-content {
+		padding: 0;
+	}
+
+	.note-hint-item {
+		color: @text-color !important;
+		padding: 5px 8.8px !important;
+	}
+	.note-hint-item.active {
+		background-color: @btn-bg !important;
+	}
+}
+
 .search-dialog {
 	.modal-dialog {
 		width: 768px;
