--- a/frappe/templates/autodoc/docs_home.html
+++ b/frappe/templates/autodoc/docs_home.html
@@ -5,8 +5,8 @@
  {% if app.style %} {{ app.style }} {% endif %}
 </style>
 
-{% if app.heading %}
-<h1>{{ app.heading }}</h1>
+{% if app.headline %}
+<h1>{{ app.headline }}</h1>
 {% endif %}
 {% if app.sub_heading %}
 <h2>{{ app.sub_heading }}</h2>
@@ -16,25 +16,6 @@
 <section>
 {{ app.long_description|markdown }}
 </section>
-{% endif %}
-
-{% if not app.hide_install %}
-<div class="section">
-	<h2>Install</h2>
-	<h4>From your site</h4>
-	<p>To install this app, login to your site and click on "Installer". Search for <b>{{ app.title }}</b> and click on "Install"</p>
-	<h4>Using Bench</h4>
-	<p>Go to your bench folder and setup the new app</p>
-	<pre><code class="sh">$ bench get-app {{app.name}} {{app.source_link}}
-	$ bench new-site testsite
-	$ bench --site testsite install-app {{app.name}}</code></pre>
-	<p>Login to your site to configure the app.</p>
-	<p><a href="install.html">Detailed Installation Steps</a></p>
-</div>
-<div class="section">
-<h2>Author</h2>
-<p>{{ app.publisher }} ({{ app.email }})</p>
-</div>
 {% endif %}
 
 <!-- autodoc -->
